# mean-reversion-trading-bot

./: .gitignore  Anchor.toml  Cargo.toml  LICENSE  Readme.md  clippy.toml  package-lock.json  package.json  strategy.md  strategy.toml  tsconfig.json
.github/workflows/: ci.yml
programs/solana-bot/: Cargo.toml
programs/solana-bot/src/: lib.rs
src/: logger.rs  main.rs
src/api/: binance.rs  client.rs  error.rs  mod.rs  response.rs  supported_api.rs
src/api/binance/: mod.rs  response.rs
src/core/: bot.rs  market.rs  market_analysis.rs  math.rs  mod.rs  position_manager.rs  trading_strategy.rs
src/strategy/: mean_calculation.rs  mod.rs  strategy.rs  timeframe.rs
tests/: Cargo.toml
tests/src/: test_initialize.rs
