[package]
name = "mean-reversion-trading-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.88"
binance_spot_connector_rust = { version = "1.3.0", features = ["full"] }
config = { version = "0.15.11", features = ["toml"] }
humantime-serde = "1.1.1"
hyper = { version = "1.6.0", features = ["full"] }
hyper-tls = "0.6.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
time = { version = "0.3.39", features = ["serde", "parsing"] }
tokio = { version = "1.44.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
    "std",
    "fmt",
    "registry",
    "time",
    "env-filter",
    "json",
] }
